Closed
Bug 13164
Opened 26 years ago
Closed 26 years ago
Open does not work in the editor
Categories
(Core :: DOM: Editor, defect, P3)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
M11
People
(Reporter: sford4, Assigned: cmanske)
References
Details
Using a pull from Saturday i was not able to get open to work until i commented
out line 1247 of nsEditorShell.cpp to if ( /* parent|| */ !(htmlFilter ||
imgFilter))
the error was:
JavaScript error: uncaught exception: [Exception... "Component returned failure
code: 0xc1f30001 (NS_ERROR_NOT_INITIALIZED) [nsIEditorShell.Open]" nsresult:
"0xc1f30001 (NS_ERROR_NOT_INITIALIZED)" location: "JS frame
:chrome://editor/content/EditorCommands.js :: EditorOpen :: line 224" data:
no]
I am using Mandrake 6, it has also been tested on Mac by sfraser.
Comment 1•26 years ago
|
||
Charlie: this appears to be related to the text for a null parent for the file
widget that you changed recently.
![]() |
Reporter | |
Updated•26 years ago
|
Summary: Open does not work in the browser → Open does not work in the editor
![]() |
Reporter | |
Updated•26 years ago
|
OS: Linux → All
Hardware: PC → All
Comment 2•26 years ago
|
||
Choose Image button is also broken (image dialog)
![]() |
Assignee | |
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M11
![]() |
Assignee | |
Comment 3•26 years ago
|
||
Oops! I thought the bug relating to the parent window was fixed and started
down the path of adjusting for it, but the bug wasn't fixed and I missed
reverting to not testing parent window.
![]() |
Assignee | |
Comment 4•26 years ago
|
||
checked in 9/7/99. The test for a null parent was removed so we can use Open,
but should be activated when bug 6783 is fixed.
tested both File Open and Open button from toolbar...both seem to
work in 9/9 build...
You need to log in
before you can comment on or make changes to this bug.
Description
•