Fixed bug 13164 preventing Open from working in editor